<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/block_vb_title"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#fff" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/shorts_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_shorts_cb"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="#fff" />

        <CheckBox
            android:id="@+id/engmnt_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_comments_cb"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="#fff" />

        <CheckBox
            android:id="@+id/porn_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/block_porn_cb"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="#fff" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/block_vb_desc"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="#fff" />

</LinearLayout>