<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/md_theme_dark_background"
    android:gravity="center_vertical|center|center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breathe"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:minHeight="50dp"
        android:text="@string/desc_ex_overlay"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/close_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/md_theme_dark_onPrimary"
            android:text="@string/close"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/proceed_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:backgroundTint="@color/md_theme_dark_onPrimary"
            android:text="@string/proceed"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>