<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center|center_horizontal"
    android:orientation="vertical"
	android:background="#ffffff"
    android:padding="50dp" >



    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breathe"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="#ff000000" />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:textAlignment="center"
        android:alpha="0"
        android:text="Imagine wasting your precious time on using shitty apps. what a looser lmao. idk what to write here tbh so hi ib dh maj hdhshs uwuw.."
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/light_grey"
        android:visibility="gone" />

<com.google.android.material.button.MaterialButton
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/start" 
android:layout_marginBottom="8dp"
android:layout_marginTop="8dp"/>
    <android.widget.LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/close_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:alpha="0"
            android:backgroundTint="@color/seed"
            android:text="@string/close_app"
            android:textColor="#ffffffff"
            android:visibility="gone" />

        <Button
            android:id="@+id/proceed_overlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:alpha="0"
            android:backgroundTint="@color/seed"
            android:text="@string/proceed"
            android:textColor="#ffffffff"
            android:visibility="gone" />
    </android.widget.LinearLayout>

</LinearLayout>